--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta name="description"
+    content="Indulge Oman offers timeless abayas and elegant women's clothing, blending cultural grace with modern sophistication." />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Baskervville:ital,wght@0,400..700;1,400..700&display=swap"
-    rel="stylesheet">
-  <title>Indulge Oman</title>
+    rel="stylesheet" />
+
+  <title>Indulge Oman | Timeless Abayas & Women's Clothing</title>
 </head>
+
 
 <body>
   <div id="root"></div>
