--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     rel="stylesheet" />
 
   <title>Indulge Oman | Timeless Abayas & Women's Clothing</title>
+  <link rel="icon" href="/public/indulge_icon.jpg" type="image/x-icon">
 </head>
 
 
